--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,12 @@
             "email": "danijelmaricic@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.5.9",
-        "crisu83/overseer": "~0.4@dev"
+        "php": ">=5.6",
+        "crisu83/overseer": "~0.4"
     },
     "require-dev": {
-        "laravel/lumen-framework": "^5.2@dev"
+        "laravel/lumen-framework": "^5.4"
     },
     "autoload": {
         "psr-4": {
