--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "crisu83/overseer": "~0.4"
+        "crisu83/overseer": "~0.4",
+        "doctrine/orm": "^2.5"
     },
     "require-dev": {
         "laravel/lumen-framework": "^5.4"
@@ -23,6 +24,12 @@
     "autoload": {
         "psr-4": {
             "Nord\\Lumen\\Rbac\\": "src"
+        }
+    },
+    "config": {
+        "sort-packages": true,
+        "platform": {
+            "php": "5.6.4"
         }
     }
 }
